2009-09-03  John W. Eaton  <jwe@octave.org>

	* pr-output.cc (set_format (const Complex&, int&, int&)):
	Avoid passing NaN or Inf to log10.

2009-09-03  Jaroslav Hajek  <highegg@gmail.com>

	* ov.cc (octave_value::assign (assign_op, const octave_value&)):
	Call maybe_mutate after in-place operation.

2009-09-03  Jaroslav Hajek  <highegg@gmail.com>

	* ov.cc (octave_value::do_non_const_unary_op): Split to
	genuine/non-genuine case.
	(octave_value::binary_op_to_assign_op): New method.
	* ov.h: Declare it.
	* ov-re-mat.h (octave_matrix::changesign): New method.
	* ov-flt-re-mat.h (octave_float_matrix::changesign): New method.
	* ov-cx-mat.h (octave_complex_matrix::changesign): New method.
	* ov-flt-cx-mat.h (octave_float_complex_matrix::changesign): New
	method.
	* ov-intx.h (OCTAVE_VALUE_INT_MATRIX_T::changesign): New method.
	* ov-bool-mat.h (octave_bool_matrix::invert): New method.
	* pt-unop.cc (tree_prefix_expression::rvalue1): Use
	do_non_const_unary_op.
	* pt-binop.cc (tree_binary_expression::rvalue1): If possible,
	convert to computed assignment.

	* OPERATORS/op-m-m.cc: Define & install in-place minus operation.
	* OPERATORS/op-fm-fm.cc: Ditto.
	* OPERATORS/op-cm-cm.cc: Ditto.
	* OPERATORS/op-fcm-fcm.cc: Ditto.
	* OPERATORS/op-int.h: Ditto.
	* OPERATORS/op-bm-bm.cc: Define & install in-place not operation.

2009-09-03  Jaroslav Hajek  <highegg@gmail.com>

	* ov-re-mat.h (octave_matrix::increment, octave_matrix::decrement):
	Use matrix_ref.
	* ov-flt-re-mat.h (octave_float_matrix::increment,
	octave_float_matrix::decrement): Use matrix_ref.
	* ov-intx.h (OCTAVE_VALUE_INT_MATRIX_T::increment,
	OCTAVE_VALUE_INT_MATRIX_T::decrement):
	Use matrix_ref.

2009-09-02  John W. Eaton  <jwe@octave.org>

	* graphics.cc (axes::properties::calc_ticklabels):
	Avoid unused parameter warning from gcc.

	* ov-perm.cc (octave_perm_matrix::save_binary,
	octave_perm_matrix::load_binary): Avoid shadow warning from gcc.

2008-09-01  David Bateman  <dbateman@free.fr>
